Refactor tests to use monet_regrid package
- Updated all import statements in test files to replace xarray_regrid with monet_regrid.
- Added rebrand notices in each test file to indicate the transition from xarray_regrid to monet_regrid.
- Ensured that CurvilinearInterpolator and related classes are imported from the new package.
- Adjusted test cases to maintain functionality with the new package structure.

--- a/docs/notebooks/benchmarks/benchmarking_curvilinear.ipynb
+++ b/docs/notebooks/benchmarks/benchmarking_curvilinear.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Benchmarking Curvilinear Regridding\n\nThis notebook benchmarks the performance and accuracy of curvilinear regridding methods provided by `xarray-regrid`.\n\nWe will compare:\n\n- `xarray-regrid`'s curvilinear regridding implementation for both nearest neighbor and bilinear methods.\n\nWe will also compare with rectilinear methods where applicable to show the differences in performance and accuracy."
+    "# Benchmarking Curvilinear Regridding\n\nThis notebook benchmarks the performance and accuracy of curvilinear regridding methods provided by `monet-regrid`.\n\nWe will compare:\n\n- `monet-regrid`'s curvilinear regridding implementation for both nearest neighbor and bilinear methods.\n\nWe will also compare with rectilinear methods where applicable to show the differences in performance and accuracy."
    ]
   },
  {
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries\n\nfrom time import time\nimport dask.distributed\nimport numpy as np\nimport xarray as xr\nimport xesmf as xe\n\nimport xarray_regrid  # Importing this will make Dataset.regrid accessible.\nfrom xarray_regrid import Grid\nfrom xarray_regrid.curvilinear import CurvilinearInterpolator\n\n# Setup Dask\nclient = dask.distributed.Client()"
+    "# Import necessary libraries\n\nfrom time import time\nimport dask.distributed\nimport numpy as np\nimport xarray as xr\nimport xesmf as xe\n\nimport monet_regrid  # Importing this will make Dataset.regrid accessible.\nfrom monet_regrid import Grid\nfrom monet_regrid.curvilinear import CurvilinearInterpolator\n\n# Setup Dask\nclient = dask.distributed.Client()"
    ]
   },
  {
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Curvilinear Regridding with xarray-regrid\n\nPerform regridding using the `xarray-regrid` library's curvilinear interpolator."
+    "## Curvilinear Regridding with monet-regrid\n\nPerform regridding using the `monet-regrid` library's curvilinear interpolator."
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create rectilinear versions of the grids for comparison\n\n# Use the center points of the curvilinear grids as approximations\n\nsource_lon_1d_rect = np.linspace(source_lon_2d.min(), source_lon_2d.max(), nx)\nsource_lat_1d_rect = np.linspace(source_lat_2d.min(), source_lat_2d.max(), ny)\n\ntarget_lon_1d_rect = np.linspace(target_lon_2d.min(), target_lon_2d.max(), nx_target)\ntarget_lat_1d_rect = np.linspace(target_lat_2d.min(), target_lat_2d.max(), ny_target)\n\n# Create rectilinear source and target datasets with proper CF-compliant coordinates for xESMF\n\nsource_ds_rect = xr.Dataset(\n    {\n        'temperature': (\n            ('lat', 'lon'),\n            np.random.random((len(source_lat_1d_rect), len(source_lon_1d_rect))).astype(np.float32),\n            {'units': 'K'}\n        )\n    },\n    coords={\n        'lon': (source_lon_1d_rect, {'standard_name': 'longitude', 'axis': 'X', 'long_name': 'longitude', 'units': 'degrees_east'}),\n        'lat': (source_lat_1d_rect, {'standard_name': 'latitude', 'axis': 'Y', 'long_name': 'latitude', 'units': 'degrees_north'})\n    }\n)\n\ntarget_ds_rect = xr.Dataset(\n    coords={\n        'lon': (target_lon_1d_rect, {'standard_name': 'longitude', 'axis': 'X', 'long_name': 'longitude', 'units': 'degrees_east'}),\n        'lat': (target_lat_1d_rect, {'standard_name': 'latitude', 'axis': 'Y', 'long_name': 'latitude', 'units': 'degrees_north'})\n    }\n)\n\n# Test rectilinear regridding using xarray-regrid\nprint(\"Testing rectilinear regridding with xarray-regrid...\")\n\nt0 = time()\ndata_regrid_rectilinear = source_ds_rect['temperature'].regrid.linear(target_ds_rect)\nelapsed_rectilinear = time() - t0\n\nprint(f\"Elapsed time for rectilinear: {elapsed_rectilinear:.3f} seconds\")"
+    "# Create rectilinear versions of the grids for comparison\n\n# Use the center points of the curvilinear grids as approximations\n\nsource_lon_1d_rect = np.linspace(source_lon_2d.min(), source_lon_2d.max(), nx)\nsource_lat_1d_rect = np.linspace(source_lat_2d.min(), source_lat_2d.max(), ny)\n\ntarget_lon_1d_rect = np.linspace(target_lon_2d.min(), target_lon_2d.max(), nx_target)\ntarget_lat_1d_rect = np.linspace(target_lat_2d.min(), target_lat_2d.max(), ny_target)\n\n# Create rectilinear source and target datasets with proper CF-compliant coordinates for xESMF\n\nsource_ds_rect = xr.Dataset(\n    {\n        'temperature': (\n            ('lat', 'lon'),\n            np.random.random((len(source_lat_1d_rect), len(source_lon_1d_rect))).astype(np.float32),\n            {'units': 'K'}\n        )\n    },\n    coords={\n        'lon': (source_lon_1d_rect, {'standard_name': 'longitude', 'axis': 'X', 'long_name': 'longitude', 'units': 'degrees_east'}),\n        'lat': (source_lat_1d_rect, {'standard_name': 'latitude', 'axis': 'Y', 'long_name': 'latitude', 'units': 'degrees_north'})\n    }\n)\n\ntarget_ds_rect = xr.Dataset(\n    coords={\n        'lon': (target_lon_1d_rect, {'standard_name': 'longitude', 'axis': 'X', 'long_name': 'longitude', 'units': 'degrees_east'}),\n        'lat': (target_lat_1d_rect, {'standard_name': 'latitude', 'axis': 'Y', 'long_name': 'latitude', 'units': 'degrees_north'})\n    }\n)\n\n# Test rectilinear regridding using monet-regrid\nprint(\"Testing rectilinear regridding with monet-regrid...\")\n\nt0 = time()\ndata_regrid_rectilinear = source_ds_rect['temperature'].regrid.linear(target_ds_rect)\nelapsed_rectilinear = time() - t0\n\nprint(f\"Elapsed time for rectilinear: {elapsed_rectilinear:.3f} seconds\")"
    ]
  },
   {
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n\n# Plot performance comparison\n\nmethods = ['Curvilinear Nearest', 'Curvilinear Bilinear', 'Rectilinear (xarray-regrid)', 'Rectilinear (xESMF)']\ntimes = [elapsed_nearest, elapsed_bilinear, elapsed_rectilinear, elapsed_esmf]\n\nplt.figure(figsize=(10, 6))\nbars = plt.bar(methods, times)\nplt.title('Regridding Performance Comparison')\nplt.ylabel('Time (seconds)')\nplt.xticks(rotation=45, ha='right')\n\n# Add time labels on bars\nfor bar, time_val in zip(bars, times):\n    plt.text(bar.get_x() + bar.get_width()/2, bar.get_height() + max(times)*0.01,\n             f'{time_val:.3f}s', ha='center', va='bottom')\n\nplt.tight_layout()\nplt.show()\n\nprint(f\"Performance Summary:\")\nfor method, time_val in zip(methods, times):\n    print(f\"{method}: {time_val:.3f} seconds\")"
+    "import matplotlib.pyplot as plt\n\n# Plot performance comparison\n\nmethods = ['Curvilinear Nearest', 'Curvilinear Bilinear', 'Rectilinear (monet-regrid)', 'Rectilinear (xESMF)']\ntimes = [elapsed_nearest, elapsed_bilinear, elapsed_rectilinear, elapsed_esmf]\n\nplt.figure(figsize=(10, 6))\nbars = plt.bar(methods, times)\nplt.title('Regridding Performance Comparison')\nplt.ylabel('Time (seconds)')\nplt.xticks(rotation=45, ha='right')\n\n# Add time labels on bars\nfor bar, time_val in zip(bars, times):\n    plt.text(bar.get_x() + bar.get_width()/2, bar.get_height() + max(times)*0.01,\n             f'{time_val:.3f}s', ha='center', va='bottom')\n\nplt.tight_layout()\nplt.show()\n\nprint(f\"Performance Summary:\")\nfor method, time_val in zip(methods, times):\n    print(f\"{method}: {time_val:.3f} seconds\")"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary\n\nThis benchmark demonstrates the performance and accuracy characteristics of curvilinear regridding methods in `xarray-regrid` compared to rectilinear methods. The curvilinear interpolator is designed to handle grids where the latitude and longitude coordinates are 2D arrays, which is common in climate and ocean models.\n\nKey findings:\n\n- Curvilinear methods properly handle 2D coordinate systems\n- Performance varies between nearest neighbor and bilinear interpolation\n- Accuracy differences exist between methods, with bilinear typically providing smoother results\n- **radius_of_influence parameter effectively reduces excessive NaN values**\n- Larger radius values fill more target points but may introduce more interpolation from distant sources\n- The fix prioritizes radius_of_influence as the primary threshold for domain detection\n- Backward compatibility is maintained when radius_of_influence is not specified\n\n### Before/After Comparison\n\nThe curvilinear nearest neighbor fix addresses the original issue where excessive NaN values were produced. Before the fix:\n\n- Many target points were incorrectly classified as out-of-domain\n- Distance threshold calculation was too restrictive\n- radius_of_influence was not properly prioritized\n\nAfter the fix:\n\n- radius_of_influence is now the primary threshold for domain detection\n- Distance calculation is more balanced (multiplier increased from 3.0 to 8.0)\n- Fewer NaN values while maintaining reasonable domain boundaries\n- Users can control the trade-off between NaN reduction and interpolation quality"
+    "## Summary\n\nThis benchmark demonstrates the performance and accuracy characteristics of curvilinear regridding methods in `monet-regrid` compared to rectilinear methods. The curvilinear interpolator is designed to handle grids where the latitude and longitude coordinates are 2D arrays, which is common in climate and ocean models.\n\nKey findings:\n\n- Curvilinear methods properly handle 2D coordinate systems\n- Performance varies between nearest neighbor and bilinear interpolation\n- Accuracy differences exist between methods, with bilinear typically providing smoother results\n- **radius_of_influence parameter effectively reduces excessive NaN values**\n- Larger radius values fill more target points but may introduce more interpolation from distant sources\n- The fix prioritizes radius_of_influence as the primary threshold for domain detection\n- Backward compatibility is maintained when radius_of_influence is not specified\n\n### Before/After Comparison\n\nThe curvilinear nearest neighbor fix addresses the original issue where excessive NaN values were produced. Before the fix:\n\n- Many target points were incorrectly classified as out-of-domain\n- Distance threshold calculation was too restrictive\n- radius_of_influence was not properly prioritized\n\nAfter the fix:\n\n- radius_of_influence is now the primary threshold for domain detection\n- Distance calculation is more balanced (multiplier increased from 3.0 to 8.0)\n- Fewer NaN values while maintaining reasonable domain boundaries\n- Users can control the trade-off between NaN reduction and interpolation quality"
    ]
   }
  ],
