--- a/docs/notebooks/benchmarks/benchmarking_rectilinear_vs_curvilinear.ipynb
+++ b/docs/notebooks/benchmarks/benchmarking_rectilinear_vs_curvilinear.ipynb
@@ -6,12 +6,35 @@
    "source": [
     "# Benchmarking Rectilinear vs Curvilinear Regridding\n",
     "\n",
-    "This notebook benchmarks the performance and accuracy of rectilinear vs curvilinear regridding methods provided by `xarray-regrid`.\n",
+    "\"\"\"\n",
+    "This file is part of monet-regrid.\n",
+    "\n",
+    "monet-regrid is a derivative work of xarray-regrid.\n",
+    "Original work Copyright (c) 2023-2025 Bart Schilperoort, Yang Liu.\n",
+    "This derivative work Copyright (c) 2025 [Your Organization].\n",
+    "\n",
+    "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "you may not use this file except in compliance with the License.\n",
+    "You may obtain a copy of the License at\n",
+    "\n",
+    "    http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "Unless required by applicable law or agreed to in writing, software\n",
+    "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "See the License for the specific language governing permissions and\n",
+    "limitations under the License.\n",
+    "\n",
+    "Modifications: Package renamed from xarray-regrid to monet-regrid,\n",
+    "URLs updated, and documentation adapted for new branding.\n",
+    "\"\"\"\n",
+    "\n",
+    "This notebook benchmarks the performance and accuracy of rectilinear vs curvilinear regridding methods provided by `monet-regrid`.\n",
     "\n",
     "We will compare:\n",
     "\n",
-    "- `xarray-regrid`'s rectilinear regridding implementation (bilinear, nearest, conservative)\n",
-    "- `xarray-regrid`'s curvilinear regridding implementation (bilinear, nearest)\n",
+    "- `monet-regrid`'s rectilinear regridding implementation (bilinear, nearest, conservative)\n",
+    "- `monet-regrid`'s curvilinear regridding implementation (bilinear, nearest)\n",
     "- Performance and accuracy differences between the two approaches\n",
     "\n",
     "This will help users understand when to use curvilinear vs rectilinear regridding methods."
@@ -31,9 +54,9 @@
     "import xarray as xr\n",
     "import xesmf as xe\n",
     "\n",
-    "import xarray_regrid  # Importing this will make Dataset.regrid accessible.\n",
-    "from xarray_regrid import Grid\n",
-    "from xarray_regrid.curvilinear import CurvilinearInterpolator\n",
+    "import monet_regrid  # Importing this will make Dataset.regrid accessible.\n",
+    "from monet_regrid import Grid\n",
+    "from monet_regrid.curvilinear import CurvilinearInterpolator\n",
     "\n",
     "# Setup Dask\n",
     "client = dask.distributed.Client()"
@@ -694,9 +717,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rectilinear Regridding with xarray-regrid\n",
+    "## Rectilinear Regridding with monet-regrid\n",
     "\n",
-    "Perform regridding using the `xarray-regrid` library's rectilinear methods."
+    "Perform regridding using the `monet-regrid` library's rectilinear methods."
    ]
   },
   {
@@ -1270,9 +1293,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Curvilinear Regridding with xarray-regrid\n",
+    "## Curvilinear Regridding with monet-regrid\n",
     "\n",
-    "Perform regridding using the `xarray-regrid` library's curvilinear interpolator."
+    "Perform regridding using the `monet-regrid` library's curvilinear interpolator."
    ]
   },
   {
@@ -2132,7 +2155,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "This benchmark demonstrates the performance and accuracy characteristics of rectilinear vs curvilinear regridding methods in `xarray-regrid`.\n",
+    "This benchmark demonstrates the performance and accuracy characteristics of rectilinear vs curvilinear regridding methods in `monet-regrid`.\n",
     "\n",
     "Key findings:\n",
     "\n",
@@ -2156,7 +2179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xarray-regrid",
+   "display_name": "monet-regrid",
    "language": "python",
    "name": "python3"
   },
