--- a/docs/notebooks/benchmarks/benchmarking_xesmf.ipynb
+++ b/docs/notebooks/benchmarks/benchmarking_xesmf.ipynb
@@ -4,7 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Performance of `xesmf` vs `xarray-regrid`\n",
+    "## Performance of `xesmf` vs `monet-regrid`\n",
+    "\n",
+    "\"\"\"\n",
+    "This file is part of monet-regrid.\n",
+    "\n",
+    "monet-regrid is a derivative work of xarray-regrid.\n",
+    "Original work Copyright (c) 2023-2025 Bart Schilperoort, Yang Liu.\n",
+    "This derivative work Copyright (c) 2025 [Your Organization].\n",
+    "\n",
+    "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "you may not use this file except in compliance with the License.\n",
+    "You may obtain a copy of the License at\n",
+    "\n",
+    "    http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "Unless required by applicable law or agreed to in writing, software\n",
+    "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "See the License for the specific language governing permissions and\n",
+    "limitations under the License.\n",
+    "\n",
+    "Modifications: Package renamed from xarray-regrid to monet-regrid,\n",
+    "URLs updated, and documentation adapted for new branding.\n",
+    "\"\"\"\n",
     "\n",
     "Compare the two conservative methods using a moderately-sized synthetic dask dataset of about 4GB."
    ]
@@ -19,7 +42,7 @@
     "import xarray as xr\n",
     "import xesmf\n",
     "\n",
-    "import xarray_regrid\n",
+    "import monet_regrid\n",
     "\n",
     "bounds = dict(south=-90, north=90, west=-180, east=180)\n",
     "\n",
@@ -87,9 +110,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xesmf/backend.py:56: UserWarning: Latitude is outside of [-90, 90]\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xesmf/backend.py:56: UserWarning: Latitude is outside of [-90, 90]\n",
       "  warnings.warn('Latitude is outside of [-90, 90]')\n",
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xesmf/backend.py:56: UserWarning: Latitude is outside of [-90, 90]\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xesmf/backend.py:56: UserWarning: Latitude is outside of [-90, 90]\n",
       "  warnings.warn('Latitude is outside of [-90, 90]')\n"
      ]
     }
@@ -105,7 +128,7 @@
    "source": [
     "## Timings\n",
     "\n",
-    "Run timings for different chunkings schemes and with NaN skipping enabled and disabled, across both libraries. Compare the ratio of `xesmf / xarray-regrid` to see the speedup factor of using this library."
+    "Run timings for different chunkings schemes and with NaN skipping enabled and disabled, across both libraries. Compare the ratio of `xesmf / monet-regrid` to see the speedup factor of using this library."
    ]
   },
   {
@@ -117,21 +140,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 72.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (32, 32).\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 72.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (32, 32).\n",
       "  result_var = func(*data_vars)\n",
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 72.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (32, 32).\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 72.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (32, 32).\n",
       "  result_var = func(*data_vars)\n",
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 72.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (32, 32).\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 72.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (32, 32).\n",
       "  result_var = func(*data_vars)\n",
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 72.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (32, 32).\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 72.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (32, 32).\n",
       "  result_var = func(*data_vars)\n",
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 6.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (160, 160).\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 6.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (160, 160).\n",
       "  result_var = func(*data_vars)\n",
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 6.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (160, 160).\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 6.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (160, 160).\n",
       "  result_var = func(*data_vars)\n",
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 6.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (160, 160).\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 6.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (160, 160).\n",
       "  result_var = func(*data_vars)\n",
-      "/home/slevang/miniconda3/envs/xarray-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 6.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (160, 160).\n",
+      "/home/slevang/miniconda3/envs/monet-regrid/lib/python3.12/site-packages/xarray/core/computation.py:320: PerformanceWarning: Regridding is increasing the number of chunks by a factor of 6.0, you might want to specify sizes in `output_chunks` in the regridder call. Default behaviour is to preserve the chunk sizes from the input (160, 160).\n",
       "  result_var = func(*data_vars)\n"
      ]
     }
@@ -183,7 +206,7 @@
    "source": [
     "## Results\n",
     "\n",
-    "With current implementations, `xesmf` is slightly faster for large pancake-style chunks. `xarray-regrid` is much faster for small chunks, especially churro-style.\n",
+    "With current implementations, `xesmf` is slightly faster for large pancake-style chunks. `monet-regrid` is much faster for small chunks, especially churro-style.\n",
     "\n",
     "These tests were run on an 8-core Intel i7 Ubuntu desktop:"
    ]
@@ -263,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xarray-regrid",
+   "display_name": "monet-regrid",
    "language": "python",
    "name": "python3"
   },
