--- a/docs/notebooks/demos/demo_most_common.ipynb
+++ b/docs/notebooks/demos/demo_most_common.ipynb
@@ -6,6 +6,29 @@
    "source": [
     "# Demo on the \"most common\" regridder\n",
     "\n",
+    "\"\"\"\n",
+    "This file is part of monet-regrid.\n",
+    "\n",
+    "monet-regrid is a derivative work of xarray-regrid.\n",
+    "Original work Copyright (c) 2023-2025 Bart Schilperoort, Yang Liu.\n",
+    "This derivative work Copyright (c) 2025 [Your Organization].\n",
+    "\n",
+    "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "you may not use this file except in compliance with the License.\n",
+    "You may obtain a copy of the License at\n",
+    "\n",
+    "    http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "Unless required by applicable law or agreed to in writing, software\n",
+    "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "See the License for the specific language governing permissions and\n",
+    "limitations under the License.\n",
+    "\n",
+    "Modifications: Package renamed from xarray-regrid to monet-regrid,\n",
+    "URLs updated, and documentation adapted for new branding.\n",
+    "\"\"\"\n",
+    "\n",
     "For regridding categorical data to a coarser resolution, normal regridding methods don't work.\n",
     "This can be data like land cover or vegetation type.\n",
     "\n",
@@ -28,7 +51,7 @@
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "import xarray_regrid\n",
+    "import monet_regrid\n",
     "\n",
     "import dask.distributed\n",
     "\n",
@@ -646,7 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xarray_regrid import Grid\n",
+    "from monet_regrid import Grid\n",
     "\n",
     "target_dataset = Grid(\n",
     "    north=90,\n",
