--- a/docs/notebooks/benchmarks/benchmarking_bilinear.ipynb
+++ b/docs/notebooks/benchmarks/benchmarking_bilinear.ipynb
@@ -6,10 +6,33 @@
    "source": [
     "# Benchmarking bilinear regridding\n",
     "\n",
+    "\"\"\"\n",
+    "This file is part of monet-regrid.\n",
+    "\n",
+    "monet-regrid is a derivative work of xarray-regrid.\n",
+    "Original work Copyright (c) 2023-2025 Bart Schilperoort, Yang Liu.\n",
+    "This derivative work Copyright (c) 2025 [Your Organization].\n",
+    "\n",
+    "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "you may not use this file except in compliance with the License.\n",
+    "You may obtain a copy of the License at\n",
+    "\n",
+    "    http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "Unless required by applicable law or agreed to in writing, software\n",
+    "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "See the License for the specific language governing permissions and\n",
+    "limitations under the License.\n",
+    "\n",
+    "Modifications: Package renamed from xarray-regrid to monet-regrid,\n",
+    "URLs updated, and documentation adapted for new branding.\n",
+    "\"\"\"\n",
+    "\n",
     "In this notebook we compare the results of three bilinear regridding methods:\n",
     "- The CDO (Climate Data Operators) command line program.\n",
     "- The xESMF xarray extension (based on the Earth System Modelling Framework).\n",
-    "- xarray's `interp` method, wrapped as an accessor by `xarray-regrid`.\n",
+    "- xarray's `interp` method, wrapped as an accessor by `monet-regrid`.\n",
     "\n",
     "The data to resample is the ERA5 monthly dataset, for the dewpoint temperature.\n",
     "\n",
@@ -24,9 +47,9 @@
    "source": [
     "from time import time\n",
     "import dask.distributed\n",
-    "import xarray_regrid  # Importing this will make Dataset.regrid accessible.\n",
+    "import monet_regrid  # Importing this will make Dataset.regrid accessible.\n",
     "import xarray as xr\n",
-    "from xarray_regrid import Grid\n",
+    "from monet_regrid import Grid\n",
     "import xesmf as xe\n",
     "\n",
     "client = dask.distributed.Client()\n",
@@ -40,9 +63,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both `xarray-regrid` and `xESMF` require a dataset to resample to. For this you can also use an already existing dataset with the desired grid.\n",
+    "Both `monet-regrid` and `xESMF` require a dataset to resample to. For this you can also use an already existing dataset with the desired grid.\n",
     "\n",
-    "Here we use the `Grid` dataclass and `create_regridding_dataset` function from `xarray-regrid` to create the dataset."
+    "Here we use the `Grid` dataclass and `create_regridding_dataset` function from `monet-regrid` to create the dataset."
    ]
   },
   {
@@ -474,9 +497,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## xarray-regrid\n",
+    "## monet-regrid\n",
     "\n",
-    "With `xarray-regrid` you can access the regridding utilities by using `Dataset.regrid`.\n",
+    "With `monet-regrid` you can access the regridding utilities by using `Dataset.regrid`.\n",
     "\n",
     "To make the comparison fair the lazy dataset is computed, to actually have the regridding performed."
    ]
@@ -1052,7 +1075,7 @@
     "\n",
     "Now the data has been regridded using all three available methods, we can compare the results.\n",
     "\n",
-    "The following code block computes the relative error `(a-b)/a` between the three datasets. As you see, the method `xarray-regrid` uses has (near) identical results compared to the CDO regridding (only floating point errors of ~1e-8). xESMF seems to (subtly) deviate from the CDO and xarray-regrid results."
+    "The following code block computes the relative error `(a-b)/a` between the three datasets. As you see, the method `monet-regrid` uses has (near) identical results compared to the CDO regridding (only floating point errors of ~1e-8). xESMF seems to (subtly) deviate from the CDO and monet-regrid results."
    ]
   },
   {
