--- a/docs/notebooks/benchmarks/benchmarking_conservative.ipynb
+++ b/docs/notebooks/benchmarks/benchmarking_conservative.ipynb
@@ -6,10 +6,33 @@
    "source": [
     "# Benchmarking conservative regridding\n",
     "\n",
+    "\"\"\"\n",
+    "This file is part of monet-regrid.\n",
+    "\n",
+    "monet-regrid is a derivative work of xarray-regrid.\n",
+    "Original work Copyright (c) 2023-2025 Bart Schilperoort, Yang Liu.\n",
+    "This derivative work Copyright (c) 2025 [Your Organization].\n",
+    "\n",
+    "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "you may not use this file except in compliance with the License.\n",
+    "You may obtain a copy of the License at\n",
+    "\n",
+    "    http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "Unless required by applicable law or agreed to in writing, software\n",
+    "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "See the License for the specific language governing permissions and\n",
+    "limitations under the License.\n",
+    "\n",
+    "Modifications: Package renamed from xarray-regrid to monet-regrid,\n",
+    "URLs updated, and documentation adapted for new branding.\n",
+    "\"\"\"\n",
+    "\n",
     "In this notebook we compare the results of three conservative regridding methods:\n",
     "- The CDO (Climate Data Operators) command line program.\n",
     "- The xESMF xarray extension (based on the Earth System Modelling Framework).\n",
-    "- a custom method, wrapped as an accessor by `xarray-regrid`. This method is based on [a post](https://discourse.pangeo.io/t/conservative-region-aggregation-with-xarray-geopandas-and-sparse/2715/3) by Stephan Hoyer.\n",
+    "- a custom method, wrapped as an accessor by `monet-regrid`. This method is based on [a post](https://discourse.pangeo.io/t/conservative-region-aggregation-with-xarray-geopandas-and-sparse/2715/3) by Stephan Hoyer.\n",
     "\n",
     "The data to resample is the ERA5 monthly dataset, in this case the total precipitation.\n",
     "Conservative regridding is more important for variables such as precipitation.\n",
@@ -25,9 +48,9 @@
    "source": [
     "from time import time\n",
     "import dask.distributed\n",
-    "import xarray_regrid  # Importing this will make Dataset.regrid accessible.\n",
+    "import monet_regrid  # Importing this will make Dataset.regrid accessible.\n",
     "import xarray as xr\n",
-    "from xarray_regrid import Grid\n",
+    "from monet_regrid import Grid\n",
     "import xesmf as xe\n",
     "import warnings\n",
     "\n",
@@ -45,9 +68,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both `xarray-regrid` and `xESMF` require a dataset to resample to. For this you can also use an already existing dataset with the desired grid.\n",
+    "Both `monet-regrid` and `xESMF` require a dataset to resample to. For this you can also use an already existing dataset with the desired grid.\n",
     "\n",
-    "Here we use the `Grid` dataclass from `xarray-regrid` to create the dataset."
+    "Here we use the `Grid` dataclass from `monet-regrid` to create the dataset."
    ]
   },
   {
@@ -523,9 +546,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## xarray-regrid\n",
+    "## monet-regrid\n",
     "\n",
-    "With `xarray-regrid` you can access the regridding utilities by using `Dataset.regrid`.\n",
+    "With `monet-regrid` you can access the regridding utilities by using `Dataset.regrid`.\n",
     "\n",
     "To make the comparison fair the lazy dataset is computed, to actually have the regridding performed."
    ]
@@ -645,7 +668,7 @@
     "\n",
     "Now the data has been regridded using all three available methods, we can compare the results.\n",
     "\n",
-    "The following code block computes the relative error `(a-b)/a` between the three datasets. As you see, the method `xarray-regrid` uses has very similar results compared to the CDO regridding. xESMF seems deviate from the CDO result."
+    "The following code block computes the relative error `(a-b)/a` between the three datasets. As you see, the method `monet-regrid` uses has very similar results compared to the CDO regridding. xESMF seems deviate from the CDO result."
    ]
   },
   {
@@ -688,7 +711,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xarray-regrid vs. CDO - RMSE: 0.00007 mm\n",
+      "monet-regrid vs. CDO - RMSE: 0.00007 mm\n",
       "xESMF vs. CDO         - RMSE: 0.00161 mm\n"
      ]
     }
@@ -702,7 +725,7 @@
     "    np.sqrt(np.mean((data_regrid - data_cdo).sel(no_edges) ** 2))[\"tp\"].to_numpy()\n",
     "    * 1000\n",
     ")\n",
-    "print(f\"xarray-regrid vs. CDO - RMSE: {rmse:.5f} mm\")\n",
+    "print(f\"monet-regrid vs. CDO - RMSE: {rmse:.5f} mm\")\n",
     "\n",
     "rmse = (\n",
     "    np.sqrt(np.mean((data_esmf - data_cdo).sel(no_edges) ** 2))[\"tp\"].to_numpy() * 1000\n",
