--- a/docs/notebooks/demos/demo_conservative_nan_threshold.ipynb
+++ b/docs/notebooks/demos/demo_conservative_nan_threshold.ipynb
@@ -6,6 +6,29 @@
    "source": [
     "# \"NaN threshold\" in conservative regridding\n",
     "\n",
+    "\"\"\"\n",
+    "This file is part of monet-regrid.\n",
+    "\n",
+    "monet-regrid is a derivative work of xarray-regrid.\n",
+    "Original work Copyright (c) 2023-2025 Bart Schilperoort, Yang Liu.\n",
+    "This derivative work Copyright (c) 2025 [Your Organization].\n",
+    "\n",
+    "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "you may not use this file except in compliance with the License.\n",
+    "You may obtain a copy of the License at\n",
+    "\n",
+    "    http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "Unless required by applicable law or agreed to in writing, software\n",
+    "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "See the License for the specific language governing permissions and\n",
+    "limitations under the License.\n",
+    "\n",
+    "Modifications: Package renamed from xarray-regrid to monet-regrid,\n",
+    "URLs updated, and documentation adapted for new branding.\n",
+    "\"\"\"\n",
+    "\n",
     "Some datasets will contain null values (i.e. `np.nan`). These can propagate quite far into the computations.\n",
     "\n",
     "To deal with this, you can use the `nan_threshold` keyword argument.\n",
@@ -68,7 +91,7 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "import xarray_regrid\n",
+    "import monet_regrid\n",
     "\n",
     "sst = xr.open_zarr(\"https://mur-sst.s3.us-west-2.amazonaws.com/zarr-v1\")[\"analysed_sst\"]\n",
     "\n",
